[package]
name = "cli"
version = "0.4.1"
edition = "2021"

[[bin]]
name = "helios"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
ethers.workspace = true
eyre.workspace = true
tracing.workspace = true
futures.workspace = true

clap = { version = "3.2.18", features = ["derive", "env"] }
dirs = "4.0.0"
ctrlc = "3.2.3"
lru = "0.11.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

client = { path = "../client" }
config = { path = "../config" }
common = { path = "../common" }
